# scf_guess

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yaml
data/reference_tables/: Table_S1.csv  Table_S5.csv  Table_S6.csv
data/test_data/: generate_wavefunctions.py  generate_wavefunctions_pyscf.py
data/test_data/geometries/: README.md
data/test_data/geometries/Buhl2006/: CrO2F2.xyz  Fe(CO)5._xyz  VF5._xyz
data/test_data/wavefunctions/HF/pcseg-0/Buhl2006/: Co(CO)3(NO).npy  CoH(CO)4.npy  Cr(C6H6)2.npy  Cr(NO)4.npy  CrO2(NO3)2.npy  CrO2Cl2.npy  Cu(acac)2.npy  CuCN.npy  (+19 more)
dev/environments/: test.yaml
examples/: broken_symmetry_UHF_examples.ipynb  first_steps.ipynb  first_steps.py  first_steps_pyscf.ipynb  reproduce_lehtola.ipynb  reproduce_lehtola.py  reproduce_lehtola_pyscf.ipynb  second_steps.ipynb  second_steps.py  third_steps.ipynb  third_steps.py
lehtola_2019/: molecules.py  scores.py
lehtola_2019/geometries/: README.txt
lehtola_2019/geometries/Buhl2006/: Cr(C6H6)(CO)3._xyz  VOF3._xyz
lehtola_2019/potentials/: README.txt
lehtola_2019/scores/: ct8b01089_si_001.txt
lehtola_2019/scores/tables/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
reproduce_lehtola_2019/: common.py  identify_deviations.py  reproduce_table_1.py  verify_table_1.py
scf_guess/: auxilary.py  io.py  metrics.py  molecule.py  wavefunction.py
tests/: test_io.py  test_metrics.py
tests/testresources/wavefunctions/: acetaldehyde_HF_STO-3G.npy  methanol_HF_STO-3G.npy  oxetane_HF_STO-3G.npy
(+230 files in other folders)
